# vbatman_evaluation

./: .gitignore  CMakeLists.txt  package.xml
grid_map/: dkan_around.yaml
launch/: evaluate_localization.launch  evaluate_navigation.launch
scripts/: closest_feature_finder.py  dummy_path_planner_server.py  evaluate_topological_map.py  feature_visualizer.py  localization_evaluator_node.py  navigation_evaluator_node.py  plot_navigation_results.py
scripts/vbatman_evaluation/: __init__.py  closest_feature_finder.py  dummy_path_planner.py  feature_visualizer.py  localzation_evaluator.py  navigation_evaluator.py  topological_map_evaluator.py
